--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
     <div class="container">
         <div class="social-media">
-            <div class="links-media"><a class="active-link"href="https://github.com/zyperr/zyperr.github.io"><i class="fa-brands fa-square-github icons"></a></i></div>
-            <div class="links-media"><a class="active-link"href="https://www.linkedin.com/in/maximiliano-vera-85571a248/"><i class="fa-brands fa-linkedin icons"></i></a></div>
+            <div class="links-media"><a target="_blank" class="active-link"href="https://github.com/zyperr/zyperr.github.io"><i class="fa-brands fa-square-github icons"></a></i></div>
+            <div class="links-media"><a target="_blank" class="active-link"href="https://www.linkedin.com/in/maximiliano-vera-85571a248/"><i class="fa-brands fa-linkedin icons"></i></a></div>
         </div>
         <button class="start">Empezar</button>
     </div>
